[package]
name = "hyper-server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.10", features = ["tokio", "server"] }
tokio = { version = "1.42.0", features = ["full"] }
http-body-util = "0.1.2"
